# Autopilot-public

./: .coverage  .coverage.EFCO2L6US4A2K.pid1097507.Xbg6YiNx.HNQIp837rWOh  .dockerignore  .env.example  .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  ACTION_CHECKLIST.md  AGENTS.md  CODEBASE_ANALYSIS_REPORT.md  CODEBASE_HEALTH_2026-06-07.md  CODEBASE_HEALTH_2026-06-08.md  CODEBASE_HEALTH_2026-06-09.md  CODEBASE_HEALTH_2026-06-10.md  DEPLOYMENT_SUMMARY.txt  DOCUMENTATION_INDEX.md  Dockerfile  Dockerfile.backend  Dockerfile.cloudrun  Dockerfile.cloudrun.frontend  Dockerfile.discord  Dockerfile.scheduler  ENVIRONMENT_STATUS.txt  HACKATHON.md  HEALTH_REPORT.md  IMPROVEMENT_PLAN.md  LAUNCH_GUIDE.txt  LICENSE  LOOP_ERROR_FIXES.md  LOOP_STATUS_2024-05-28.md  Makefile  QUICK_REFERENCE.txt  QUICK_START.txt  README.md  README_v2.md  SECURITY.md  SETUP_COMPLETE.md  SETUP_v2.txt  autopilot-continuous.py  (+24 more)
.antigravitycli/: a668bb32-84fb-4c6f-818d-6d4916186db6.json
.state/: config.json  cooldowns.json
agent/: MISSIONS.md  README.md  __init__.py  arize_bridge.py  gateway.py  mcp_apex_server.py
autopilot-local/: .env.local.example  .gitignore  README.md  package-lock.json  package.json  start-unified.sh  start.sh
backups/: latest
data/: audit.db-shm  cloud_run_frontend_url.txt  cloud_run_url.txt  cloud_run_urls.json  current_analysis.md  integration_probe_cache.json  kalshi_ticks.jsonl  loop_state.json  roadmap.json
deploy/: README.md  _read_env_value.py  apex-dashboard.service  apex-discord-bot.service  apex-scheduler.service  deploy_cloud_run.sh  gcloudignore.frontend  setup_morning_chain_local.sh
docs/: API.md  API_SOURCES.md  ARCHITECTURE.md  CHANGELOG.md  discord-service.md  wc2026-external-repos.md
logs/: backend-apex.pid  cycle-20260529-073057.txt  cycle-20260608-130240.json  cycle-20260609-101605.json  cycle-20260609-110752.json  cycle-final-v13.json  cycle_20260528_113935.json  cycle_20260528_120011.json  cycle_20260528_122644.json  cycle_20260528_124216.json  cycle_20260528_130709.json  cycle_20260528_165204.json  cycle_20260528_172438.json  cycle_20260528_175712.json  cycle_20260528_182758.json  cycle_20260528_185842.json  cycle_20260528_192930.json  cycle_20260528_200015.json  cycle_20260528_204239.json  cycle_20260528_211931.json  cycle_20260528_220333.json  cycle_20260528_223916.json  cycle_20260528_224827.json  cycle_20260528_235757.json  cycle_20260529_000150.json  (+181 more)
(+1255 files in other folders)
